clusters/mgmt/pihole-traefik.yaml
---
# Service for DNS - LoadBalancer type for LAN access
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-lb
  namespace: pihole
  annotations:
    # k3s servicelb uses this
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  # loadBalancerIP: 192.168.1.53  # Uncomment and set your desired IP
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
  selector:
    app: pihole
---
# IngressRoute for Pi-hole web UI (HTTP)
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web
  namespace: pihole
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pihole.mgmt.local`) || Host(`pihole.lan`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
  # TLS with self-signed cert
  tls:
    secretName: pihole-tls
